--- a/_layouts/narrative.html
+++ b/_layouts/narrative.html
@@ -4,6 +4,7 @@ layout: default
 
 <div class="narrative">
   <h1 class="post-title">{{ page.title }}</h1>
+  <p class="citation">{{page.materials}}</p>
 <!--  <p class="citation"> by {{ page.author }}</p>-->
   {{ content }}
 </div>
