--- a/_layouts/narrative.html
+++ b/_layouts/narrative.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <div class="narrative">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <p class="citation">{{page.materials}}</p>
+<!--  <h1 class="post-title">{{ page.title }}</h1> -->
+  <p class="citation">{{page.tags}}</p>
 <!--  <p class="citation"> by {{ page.author }}</p>-->
   {{ content }}
 </div>
