--- a/_layouts/narrative.html
+++ b/_layouts/narrative.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="narrative">
 <!--  <h1 class="post-title">{{ page.title }}</h1> -->
-  <p class="post-title">{{page.tags}}</p>
+  <p class="post-title"><i>{{page.tags}}</i></p>
 <!--  <p class="citation"> by {{ page.author }}</p>-->
   {{ content }}
 </div>
