--- a/_layouts/narrative.html
+++ b/_layouts/narrative.html
@@ -5,7 +5,7 @@ layout: default
 <div class="narrative">
 <!--  <h1 class="post-title">{{ page.title }}</h1> -->
   <p class="post-title">
-    {% assign tags = page.tags | split:&nbsp; %}
+    {% assign tags = page.tags | split:',' %}
 <ul>
     {% for tag in tags %}
     <li>{{ tag }}</li>
