--- a/_layouts/narrative.html
+++ b/_layouts/narrative.html
@@ -5,12 +5,11 @@ layout: default
 <div class="narrative">
 <!--  <h1 class="post-title">{{ page.title }}</h1> -->
   <p class="post-title">
-    {% assign tags = page.tags %}
-<ul>
-    {% for tag in tags %}
-    <li>{{ tag }}</li>
-    {% endfor %}
-</ul></p>
+ {% assign tags = page.tags %}
+ {% for tag in tags %}
+	<a href="#{{ tag | slugify }}"> {{ tag }} </a>
+{% endfor %}
+</p>
 <!--  <p class="citation"> by {{ page.author }}</p>-->
   {{ content }}
 </div>
