--- a/public/css/ed.css
+++ b/public/css/ed.css
@@ -211,7 +211,10 @@ blockquote {
 	margin: 0 0 20px 0; 
   	color: #454545;
 	border-left: none;
-	font-style: italic;
+	/*removed by TC*/
+	/*font-style: italic;*/
+	/*added by TC*/
+	background-color: tan;
 }
 
 blockquote p:last-child {
